# Classes

./: .gitignore  README.md
lab1/: ~WRL0003.tmp  Лаб. 1. Типы данных.docx
lab1/prog1/: main.cpp
lab10/: Лаб. 10. Односвязный список.docx
lab10/prog/: CMakeLists.txt  main.cpp  mylist.cpp  mylist.hpp
lab2/: Лаб. 2. Арифметические операции.docx
lab2/prog/: main.cpp
lab3/: Лаб. 3. Битовые операции.docx
lab3/prog/: CMakeLists.txt  main.cpp
lab4/: Лаб. 4. Условные операторы.docx
lab4/prog/: main.cpp
lab5/: Лаб. 5. Циклы.docx
lab5/prog/: main.cpp
lab6/: ~$б. 6. Массивы.docx  Лаб. 6. Массивы.docx
lab6/prog/: main.cpp
lab7/: Лаб. 7. Функции.docx
lab7/prog/: CMakeLists.txt  lab7.cpp  lab7.hpp  main.cpp
lab8/: Лаб. 8. Строки.docx
lab8/prog/: CMakeLists.txt  a.txt  b.txt  input.txt  main.cpp
lab9/: Лаб. 9. Интерпретация целых чисел.docx
lab9/prog/: CMakeLists.txt  main.cpp  mylist.hpp
